--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "distube": "^3.0.5",
     "express": "^4.17.2",
     "ffmpeg": "0.0.4",
-    "gd-browser-api": "^1.0.1",
     "glob": "^7.2.0",
     "libsodium-wrappers": "^0.7.9",
+    "pointercrate": "^0.1.0",
     "utf-8-validate": "^5.0.7"
   },
   "repository": {
